update apis and swagger, make graph key as optional input
